# FinalProjectRSF

./: .gitignore  README.md  readme
scripts/: build.ps1  receiver.py  sender.py  test.py
src/ir_receiver/: .json  CMakeLists.txt
src/ir_receiver/ir_loopback/: ir_loopback.c
src/ir_receiver_test/: .json  CMakeLists.txt
src/ir_receiver_test/ir_loopback/: CMakeLists.txt  ir_loopback.c  pseudocode.py
src/ir_sender/: .json  CMakeLists.txt
src/ir_sender/ir_loopback/: ir_loopback.c  pseudocode.py
src/ir_sender_test/: .json  CMakeLists.txt
src/ir_sender_test/ir_loopback/: CMakeLists.txt  ir_loopback.c
test/: 0_123_r  0_123_s  0_246_r  0_246_s  0_389_r  0_389_s  180_20_r  180_20_s  w180_20_r  w180_20_s
